--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,8 @@ jobs:
       - name: Build tweak
         run: |
           make clean package
-      - uses: actions/upload-artifact@v2
+      - name: Upload build output
+        uses: actions/upload-artifact@v4
         with:
           name: output
           path: ./
